--- a/css/layout.css
+++ b/css/layout.css
@@ -23,5 +23,18 @@
 }
 
 /* Posititoning Classes */
+.col-1{
+  width:32%;
+  float:left;
+}
+
+.col-2{
+  width:66%;
+  float:left;
+}
+
+.col-3{
+  display:block
+}
 
 
