--- a/css/layout.css
+++ b/css/layout.css
@@ -40,3 +40,12 @@
 [class="col-"]{
   margin-left:2%;
 }
+
+.clearfix:after{
+  content:".";
+  display:block;
+  visibility:hidden;
+  clear:both;
+  height:0;
+  line-height:0;
+}
